@@ -1,3 +1,10 @@
+2011-04-19  Ulrich Drepper  <drepper@gmail.com>
+
+	* nss/nss_files/files-initgroups.c: New file.
+	* nss/Makefile (libnss_files-routines): Add files-initgroups.
+	* nss/Versions (libnss_files) [GLIBC_PRIVATE]: Export
+	_nss_files_initgroups_dyn.
+
 2011-03-31  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	* elf/elf.h (R_ARM_IRELATIVE): Define.
